--- a/client-novabook/src/main/resources/templates/blocks/user_block.html
+++ b/client-novabook/src/main/resources/templates/blocks/user_block.html
@@ -10,14 +10,19 @@
                     <div class="col-1">
                         <img th:src="@{'/avatars/' + ${responseInvite.avatarFrom}}" alt="mdo" width="35" height="35" class="rounded-circle">
                     </div>
-                    <div class="col-7">
+                    <div class="col-4">
                         <a class="dropdown-item" th:text="${responseInvite.nameFrom}" th:href="'/client/' + ${responseInvite.userFrom}">User</a>
                     </div>
+                    <div class="col-3">
+                        <p class="dropdown-item" th:text="${responseInvite.status}">Status</p>
+                    </div>
                     <div class="col-4 d-grid d-md-flex justify-content-md-end">
-                        <form class="container-fluid" th:method="post" th:action="@{'/client/' + ${responseInvite.userFrom} + '/friend'}" id="formAddFriend">
+                        <form class="container-fluid" th:method="post" th:action="@{'/client/' + ${responseInvite.userFrom} + '/friend'}">
+                            <button class="btn btn-outline-light" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Принять</button>
                         </form>
-                        <button class="btn btn-outline-light" form="formAddFriend" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Принять</button>
-                        <button class="btn btn-outline-light" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Отклонить</button>
+                        <form class="container-fluid" th:method="delete"  th:action="@{'/client/' + ${responseInvite.userFrom} + '/friend'}">
+                            <button class="btn btn-outline-light" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Отклонить</button>
+                        </form>
                     </div>
                 </div>
             </li>
@@ -34,10 +39,13 @@
                     <div class="col-1">
                         <img th:src="@{'/avatars/' + ${requestInvite.avatarTo}}" alt="mdo" width="35" height="35" class="rounded-circle">
                     </div>
-                    <div class="col-7">
+                    <div class="col-5">
                         <a class="dropdown-item" th:text="${requestInvite.nameTo}" th:href="'/client/' + ${requestInvite.userTo}">User</a>
                     </div>
-                    <div class="col-4 d-grid d-md-flex justify-content-md-end">
+                    <div class="col-3 d-grid d-md-flex justify-content-md-end">
+                        <p th:text="${#temporals.format(requestInvite.dateTime, 'dd MMMM yyyy HH:mm:ss', new java.util.Locale('ru', 'RU'))}"></p>
+                    </div>
+                    <div class="col-3 d-grid d-md-flex justify-content-md-end">
                         <p th:text="${requestInvite.status}"></p>
                     </div>
                 </div>
